# pipecat-speech-cache

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
example/: .env.example  README.md  bot.py
pipecat_speech_cache/: __init__.py  base.py  models.py  redis.py  speech_cache.py  tts.py
pipecat_speech_cache/providers/: elevenlabs.py
tests/: test_models.py  test_redis.py  test_speech_cache.py
